<resources>
    <string name="app_name">BikuBiku</string>

    <string name="text_account_bank_name">Atas Nama</string>
    <string name="text_account_bank_number">Nomor Rekening</string>
    <string name="text_activate_account_login">Akun anda belum diaktifkan. Silahkan cek kotak masuk atau spam email anda untuk melakukan aktivasi akun</string>
    <string name="text_activate_account_register">Pendaftaran berhasil. Silahkan cek kotak masuk atau spam email anda untuk melakukan aktivasi akun</string>
    <string name="text_address">Alamat</string>
    <string name="text_address_empty">Alamat Tidak Boleh Kosong</string>
    <string name="text_aim">Tujuan</string>
    <string name="text_aim_bank">Bank Tujuan</string>
    <string name="text_bio">Bio</string>
    <string name="text_cancel">Batal</string>
    <string name="text_cancel_transaction_title">Pembatalan Transaksi</string>
    <string name="text_cancel_transaction_message">Anda yakin akan membatalkan transaksi saat ini?</string>
    <string name="text_cannot_empty">Tidak Boleh Kosong</string>
    <string name="text_cashout">Tarik Dana</string>
    <string name="text_changed_failed">Perubahan Gagal</string>
    <string name="text_chat_exist">Anda sedang melakukan konsultasi, silahkan buka ruang chat disini</string>
    <string name="text_closed_chat">Waktu Konsultasi Telah Berakhir</string>
    <string name="text_finish">Selesai</string>
    <string name="text_first_chat">Anda Dapat Memulai Konsultasi dengan Ahli Kami. Anda memiliki durasi 60 menit</string>
    <string name="text_id_line">Id Line</string>
    <string name="text_next">Lanjutkan</string>
    <string name="text_no_history_chat">No History Chat</string>
    <string name="text_balance">Nominal</string>
    <string name="text_password_old">Password Lama</string>
    <string name="text_password_new">Password Baru</string>
    <string name="text_password_confirm">Konfirmasi Password Baru</string>
    <string name="text_psychologist_spesialist">Keahlian psikolog</string>
    <string name="text_price_consultation">Harga Konsultasi</string>
    <string name="text_start_chat">Mulai Chat</string>
    <string name="text_search_psychologist">Cari Psikolog</string>
    <string name="text_submit">Submit</string>
    <string name="text_success_cashout">Permintaan penarikan dana berhasil diterima. Silahkan tunggu beberapa saat.</string>
    <string name="text_success_topup">Permintaan topup dana berhasil diterima. Anda dapat melakukan konfirmasi via email info@bikubiku.id atau via chat wa 085645991577 </string>
    <string name="text_wa">No WA</string>
    <string name="text_total_price_consultation">Total Harga Konsultasi</string>
    <string name="text_topup">Top Up</string>
    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_question_a">Soal a</string>
    <string name="text_question_b">Soal b</string>
    <string name="text_question_number">Nomor Soal</string>
    <string name="text_end_waiting">Waktu tunggu anda habis, kabim tidak merespon atau menolak pesanan anda</string>
    <string name="text_waiting">Menunggu Respon Kabim</string>
    <string name="text_request_again">Pesan Kembali</string>\
    <string name="text_sakubiku_balance">Saldo saku biku</string>
    <string name="text_typing">Typing....</string>
    <string name="text_waiting_confirmation">Silahkan tunggu konfirmasi dari psikolog kami</string>
    <string name="text_waiting_sakubiku">Dana menunggu pembayaran dan konfirmasi</string>

    <string name="text_save">Simpan</string>
    <string name="text_login_line">Login Via Line</string>
    <string name="text_daftar_line">Daftar Via Line</string>
    <string name="text_login">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_register">Daftar</string>
    <string name="text_email">Email</string>
    <string name="text_male">Laki-Laki</string>
    <string name="text_female">Perempuan</string>
    <string name="text_name">Nama</string>
    <string name="text_feature_not_available_now">Mohon maaf fitur belum tersedia saat ini</string>
    <string name="text_nama_menu" />
    <string name="text_saku_biku">Saku Biku</string>
    <string name="text_user_name_empty">Username tidak boleh kosong</string>
    <string name="text_password_empty">Password tidak boleh kosong</string>
    <string name="text_email_empty">Email tidak boleh kosong</string>
    <string name="text_name_empty">Nama tidak boleh kosong</string>
    <string name="text_gender_empty">Anda belum memilih gender</string>
    <string name="text_konsultasi_online">Konsultasi Online</string>
    <string name="text_reload">Reload</string>
    <string name="text_check_intenet_connection">Silahkan Periksa Koneksi Internet Anda</string>
    <string name="text_no_data_found">No Data Found</string>
    <string name="text_kabim_name">Nama Kabim</string>
    <string name="text_participant_name">Nama Participant</string>
    <string name="text_last_message">Last Message</string>
    <string name="text_time_stamp">Waktu Chat</string>
    <string name="text_logout">Keluar</string>
    <string name="text_type_message">Ketik Pesan</string>
    <string name="text_rate_kabim">Rate Kabim</string>
    <string name="text_loading">Silahkan tunggu beberapa saat.....</string>
    <string name="text_account">Akun</string>
    <string name="text_account_settings">Pengaturan Akun</string>
    <string name="text_account_logout">Log Out</string>
    <string name="text_kabim_register">Daftar Jadi Kabim</string>
    <string name="text_kabim">Kabim</string>
    <string name="text_register_success">Registrasi Berhasil</string>
    <string name="text_register_failed">Registrasi Gagal</string>
    <string name="text_login_success">Login Berhasil</string>
    <string name="text_login_failed">Login Gagal</string>
    <string name="text_edit_profile">Edit Profil</string>
    <string name="text_profil">Profil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="accept">Terima</string>
    <string name="reject">Tolak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fa_graduation">&#xf19d;</string>
    <string name="fa_archieve">&#xf187;</string>
    <string name="fa_history">&#xf1da;</string>
    <string name="fa_we_chat">&#xf1d7;</string>
    <string name="fa_text_o">&#xf0f6;</string>
    <string name="fa_check">&#xf046;</string>
    <string name="fa_vCard">&#xf2bc;</string>
    <string name="fa_trophy">&#xf091;</string>
    <string name="fa_group">&#xf0c0;</string>
    <string name="fa_user_o">&#xf2c0;</string>
    <string name="fa_sign_out">&#xf08b;</string>

    <string-array name="spn_aim">
        <item>Saya hanya ingin belajar</item>
        <item>Saya hanya ingin mengajar</item>
        <item>Saya ingin belajar sekaligus mengajar</item>
    </string-array>
</resources>
