<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar_room_chat"
            android:layout_centerHorizontal="true"
            android:src="@drawable/avatar1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorPrimary"/>
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_psychologist_name"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_psychologist_spesialist"
                android:text="@string/text_psychologist_spesialist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_price_consultation"
                android:text="@string/text_price_consultation"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_start_chat"
                android:text="@string/text_start_chat"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:layout_gravity="right"
                android:background="@color/colorGreen400"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>