<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_psychologist"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorPrimary"/>
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_psychologist_name"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_price_consultation"
                    android:text="@string/text_price_consultation"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="@color/colorWhite"
            android:text="@string/text_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
