<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tesminat.TesMinatActivity">
    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <RelativeLayout
            android:id="@+id/rl_tesminat"
            android:background="@color/colorWhite"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_question_number"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/text_question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_question_a"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_black"
                    android:text="@string/text_question_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_black"/>

                <TextView
                    android:id="@+id/tv_question_b"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_black"
                    android:text="@string/text_question_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                android:src="@android:drawable/ic_media_next"
                app:fabSize="normal" />
            <Button
                android:id="@+id/btn_submit"
                android:text="@string/text_submit"
                android:layout_margin="15dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="15dp"
                android:src="@android:drawable/ic_media_previous"
                app:fabSize="normal" />
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>